# mcpxx

./: .gitignore  CMakeLists.txt
examples/basicserver/: CMakeLists.txt  main.cpp  run.sh
src/core/: bytestream.cpp  bytestream.h  logger.cpp  logger.h  messaging.cpp  messaging.h  server.cpp  server.h
src/data/: blockposition.h  callinginstance.h  messages.h  packet.h  player.h  slotdata.h  state.h  statusresponsedata.h  type.h
src/protocol/: handshake.cpp  handshake.h
src/protocol/c2s/handshake/: handshake.cpp  handshake.h
src/protocol/c2s/statusrequest/: statusrequest.cpp  statusrequest.h
src/protocol/s2c/statusresponse/: statusresponse.cpp  statusresponse.h
src/utilities/: utilities.cpp  utilities.h
